--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -11,6 +11,7 @@
 .hero--image {
     width: 395px;
     align-self: center;
+    margin-bottom: 32px;
 }
 
 .hero--text h1 {
@@ -18,6 +19,7 @@
     font-size: 36px;
     line-height: 110%;
     color: #000000;
+    margin-top: 0;
     margin-bottom: 16px;
 }
 
