--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -8,6 +8,26 @@
     max-height: 235px;
     border-radius: 9px;
     overflow: hidden;
+    position: relative;
+}
+
+.card--image_label {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 6px;
+    margin-left: 6px;
+    width: 61px;
+    height: 20px;
+    background: #FFFFFF;
+    border-radius: 2px;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 10.24px;
+    line-height: 110%;
+    text-align: center;
+    color: #222222;
 }
 
 .card--image {
