--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,6 +1,7 @@
 .card--container {
     max-width: 176px;
-    padding: 0 36px;
+    min-width: 176px;
+    margin-right: 18px;
     margin-bottom: 30px;
     font-size: 12px;
 }
@@ -8,6 +9,7 @@
 .card--image_wrapper {
     max-height: 235px;
     border-radius: 9px;
+    overflow: hidden;
 }
 
 .card--image_label {
